# kaggle-breast-cancer-wisconsin-data

./: .gitignore  README.md  breat_cancer-wisconsin-data.ipynb  download_data.sh  hello.py  pyproject.toml
