[project]
name = "kaggle-breast-cancer-wisconsin-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "kaggle>=1.6.17",
    "matplotlib>=3.10.0",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
    "xgboost>=2.1.3",
]
